--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panda Commerce</title>
+    <title>bg-info Commerce</title>
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+<!-- <link rel="stylesheet" href="css/style.css"> -->
 </head>
 <body>
   <header class="container">
@@ -24,13 +26,13 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Shoes</a>
+                <a class="nav-link" href="#shoes">Shoes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Backpack</a>
+                <a class="nav-link" href="#backpack">Backpack</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Subscribe</a>
+                <a class="nav-link" href="#subscribe">Subscribe</a>
               </li>
                
             </ul>
@@ -140,7 +142,7 @@
    shoes section 
      ------------->
 
-<section class="container">
+<section class="container" id="shoes">
   <div class="row row-col-lg-4 my-5 gy-4">
     <h3>Shoes</h3>
     <div class="col">
@@ -192,7 +194,7 @@
    bag section 
       --------->
 
-<section class="container">
+<section class="container" id="backpack">
   <div class="row row-col-lg-4 my-5 gy-4">
     <h3>Backpack</h3>
     <div class="col">
@@ -237,13 +239,35 @@
     </div>
    </div>
   </div>
-
 </section>
 
+<!---------
+   subscribe 
+    --------->
+     
+<section style="height: 300px;" class="container d-flex rounded-3 justify-content-center align-items-center bg-info" id="subscribe">
+  <div>
+    <h2>LET'S STAY IN TOUCH</h2>
+    <p>Get updates on sales, specials and more</p>
+ <form>
+  <div class="mb-1"> <input class=" rounded" type="email" name="" id=""></div>
+  <button class=" rounded btn btn-danger">Submit</button>
+ </form>
+  </div>
+ 
+</section>
 </main>
 
 
+<!--------
+   footer 
+  --------->
 
+ <footer class="mt-5 text-center">
+  <p><small>©2023. bg-info Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+ </footer>
+  
+ 
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
